--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.3.1",
 		"react-redux": "^5.0.7",
-		"redux": "^4.0.0"
+		"redux": "^4.0.0",
+		"redux-persist": "^5.10.0"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.1",
