--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react-native": "0.55.4",
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.3.1",
+		"react-persist": "^1.0.2",
 		"react-redux": "^5.0.7",
 		"redux": "^4.0.0",
 		"redux-persist": "^5.10.0"
