Renamed app and package from 'easyGrades' to 'gradeAid'

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,10 +78,6 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 
-project.ext.vectoricons = [iconFontNames: [ 'MaterialIcons.ttf']]
-
-apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -98,11 +94,11 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.easygrades"
+        applicationId "com.gradeaid"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
