--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.3.1",
 		"react-native": "0.55.4",
+		"react-native-splash-screen": "^3.1.1",
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.3.1",
 		"react-persist": "^1.0.2",
