--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react-persist": "^1.0.2",
 		"react-redux": "^5.0.7",
 		"redux": "^4.0.0",
-		"redux-persist": "^5.10.0"
+		"redux-persist": "^5.10.0",
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.1",
